syntax = "proto3";

package api.sastoj.admin.case.service.v1;

import "google/api/annotations.proto";

option go_package = "sastoj/api/sastoj/admin/case/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.sastoj.admin.case.service.v1";

service CaseService {
  rpc DeleteCasesByProblemId(DeleteCasesByProblemIdRequest) returns (DeleteCasesByProblemIdReply){
    option (google.api.http) = {delete: "/case/{problem_id}"};
  };
}

message Case {
  int64 id = 1;
  int32 point = 2;
  int32 index = 3;
  bool is_auto = 4;
}

message DeleteCasesByProblemIdRequest{
  int64 problem_id = 1;
}
message DeleteCasesByProblemIdReply{}